# vyv

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: awake.rs  battery_monitor.rs  clamshell.rs  drive_alive.rs  lib.rs  main.rs  process_monitor.rs  profiles.rs  simulation.rs  state.rs  stats.rs  timer.rs  tray.rs
