[package]
name = "vyv"
version = "0.2.0"
edition = "2021"
description = "Keep your computer awake"

[lib]
name = "vyv_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
keepawake = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Phase 2: Activity simulation + panic button
tauri-plugin-global-shortcut = "2"
enigo = "0.3"
rand = "0.8"

# Phase 3: Process guardian + battery
sysinfo = "0.33"
battery = "0.7"

# Phase 4: CLI + autostart + stats
tauri-plugin-cli = "2"
tauri-plugin-autostart = "2"
chrono = "0.4"

# Auto-updater
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
